Bug 965414 - Don't try to use the JS downloads implementation in the webapp runtime because we don't have one. r=paolo